examples/bad/share_mut.mko
fn main() {
    share let mut x = 1
    x = 2
}
